src/builder/tests/misc/snapshots/ciboulette2postgres__builder__tests__misc__sort__single.snap
---
source: src/builder/tests/misc/sort.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_peoples_data" AS (
  SELECT
    "public"."peoples"."id" :: TEXT AS "id",
    $0 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $1,
      "public"."peoples"."age",
      $2,
      "public"."peoples"."first-name",
      $3,
      "public"."peoples"."gender",
      $4,
      "public"."peoples"."last-name",
      $5,
      "public"."peoples"."twitter"
    ) AS "data"
  FROM
    "public"."peoples"
),
"cte_articles_data" AS (
  SELECT
    "public"."articles"."id" :: TEXT AS "id",
    $6 :: TEXT AS "type",
    NULL :: json AS "data"
  FROM
    "public"."articles"
  WHERE
    "public"."articles"."id" IN (
      SELECT
        "cte_peoples_data"."articles"
      FROM
        "cte_peoples_data"
    )
),
"cte_favorite_color_data" AS (
  SELECT
    "public"."favorite_color"."id" :: TEXT AS "id",
    $7 :: TEXT AS "type",
    NULL :: json AS "data",
    "public"."favorite_color"."color" AS "sort_color"
  FROM
    "public"."favorite_color"
  WHERE
    "public"."favorite_color"."id" IN (
      SELECT
        "cte_peoples_data"."favorite_color"
      FROM
        "cte_peoples_data"
    )
),
"cte_rel_articles_rel_data" AS (
  SELECT
    "public"."people-article"."id" :: TEXT AS "id",
    $8 :: TEXT AS "type",
    NULL :: json AS "data",
    "public"."people-article"."article_id" AS "rel_article_id",
    "public"."people-article"."people_id" AS "rel_people_id"
  FROM
    "public"."people-article"
  WHERE
    "public"."people-article"."people_id" = "cte_peoples_data"."id"
),
"cte_rel_articles_data" AS (
  SELECT
    "public"."articles"."id" :: TEXT AS "id",
    $9 :: TEXT AS "type",
    NULL :: json AS "data"
  FROM
    "public"."articles"
  WHERE
    "public"."articles"."id" IN (
      SELECT
        "cte_rel_articles_rel_data"."article_id"
      FROM
        "cte_rel_articles_rel_data"
    )
)
SELECT
  "cte_rel_articles_data"."id",
  "cte_rel_articles_data"."type",
  "cte_rel_articles_data"."data"
FROM
  "cte_rel_articles_data"
UNION
ALL
SELECT
  "cte_favorite_color_data"."id",
  "cte_favorite_color_data"."type",
  "cte_favorite_color_data"."data"
FROM
  "cte_favorite_color_data"
UNION
ALL
SELECT
  "cte_rel_articles_rel_data"."id",
  "cte_rel_articles_rel_data"."type",
  "cte_rel_articles_rel_data"."data"
FROM
  "cte_rel_articles_rel_data"
UNION
ALL
SELECT
  "cte_peoples_data"."id",
  "cte_peoples_data"."type",
  "cte_peoples_data"."data"
FROM
  "cte_peoples_data"
  INNER JOIN "public"."peoples" ON "public"."peoples"."id" = "cte_peoples_data"."id"
  INNER JOIN "cte_favorite_color_data" ON "cte_favorite_color_data"."id" = "public"."peoples"."favorite_color"
ORDER BY
  "cte_favorite_color_data"."sort_color";
